# Knit

./: .gitignore  KnitGrammar_Hybrid_Diffusion方案.md  README.md  pyproject.toml
.codex/environments/: environment.toml
examples/: ar_dataloader.py  build_dataset_complete.py  build_merged_dataset.py  build_paired_dataset.py  render_generated_color_maps.py
knit_decode/: __init__.py  ar_dataset.py  ar_export.py  cli.py  discovery.py  image_ops.py  legend.py  pipeline.py  pixelcnn_baseline.py  pixelcnn_dataset.py  pixelsnail_baseline.py
knit_decode/inverse_full_v1/: __init__.py  dataset.py  eval.py  losses.py  model.py  notes.txt  perceptual.py  train.py
knit_decode/inverse_residual_v1/: __init__.py  dataset.py  eval.py  losses.py  manifest.py  model.py  notes.txt  perceptual.py  train.py
knit_decode/parser_t/: __init__.py  build_dataset2_manifest.py  cache_dataset2_teacher.py  cli.py  dataset.py  debug_targets.py  eval_dataset_complete.py  eval_manifest.py  losses.py  model.py  split_manifest.py  split_ratio.py  train.py
knit_decode/parser_t_inverse/: __init__.py  build_manifest.py  dataset.py  eval.py  losses.py  model.py  palette.py  train.py
knit_decode/refiner_inverse_v1/: __init__.py  dataset.py  (+5 more)
parser_t/: manifest.jsonl
parser_t_inverse/: dataset2_train_rendering_instruction17.jsonl  dataset2_val_rendering_instruction17.jsonl  palette_mapping.json
tests/: test_ar_dataset.py  test_ar_export.py  test_cli_smoke.py  test_discovery.py  test_image_ops.py  test_legend.py  test_pixelcnn_baseline.py  test_pixelcnn_dataset.py  test_pixelsnail_baseline.py
(+934 files in other folders)
