[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knit-decode"
version = "0.1.0"
description = "Research workspace for knit simulation-image generation and topology parsing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
]

[project.scripts]
knit-parse-t = "knit_decode.parser_t.cli:main"

[project.optional-dependencies]
train = [
  "torch>=2.1.0",
]

[tool.setuptools.packages.find]
include = ["knit_decode*"]
